crates/hwp-core/tests/snapshots/snapshot_tests__aligns_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">left 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">left 10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">center 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">center -10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">right 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">right 10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">inside 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">inside 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">outside 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">outside 10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">top 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">top 10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">middle 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">middle -10</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">bottom 0</span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">bottom 10</span></p></div>
</div>
