crates/hwp-core/tests/snapshots/snapshot_tests__aligns_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



left 0  
left 0

---


left 0  
left 10

---


left 0  
center 0

---


left 0  
center -10

---


left 0  
right 0

---


left 0  
right 10

---


left 0  
inside 0

---


left 0  
inside 0

---


left 0  
outside 0

---


left 0  
outside 10

---


left 0  
top 0

---


left 0  
top 10

---


left 0  
middle 0

---


left 0  
middle -10

---


left 0  
bottom 0

---


left 0  
bottom 10
