crates/hwp-core/tests/snapshots/snapshot_tests__borderfill_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:15.56mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:31.13mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="htb" style="left:30mm;width:150mm;top:35mm;height:15.56mm;"><svg class="hs" viewBox="-2.5 -2.5 153 18.59" style="left:-2.5mm;top:-2.5mm;width:153mm;height:18.59mm;"><defs><pattern id="w_00" width="10" height="10" patternUnits="userSpaceOnUse"><rect width="10" height="10" fill="rgb(63,127,255)" /></pattern></defs><path fill="url(#w_00)" d="M0,0.99L148,0.99L148,1.99L0,1.99L0,0.99Z "></path><path d="M0,0 L0,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M148,0 L148,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L148.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L148.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,9.06 L148.06,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,13.59 L148.06,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,13.59 L148.06,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div><div class="hce" style="left:0mm;top:4.53mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div><div class="hce" style="left:0mm;top:9.06mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div></div><div class="htb" style="left:30mm;width:150mm;top:50.56mm;height:15.56mm;"><svg class="hs" viewBox="-2.5 -2.5 153 18.59" style="left:-2.5mm;top:-2.5mm;width:153mm;height:18.59mm;"><defs></defs><path fill="url(#w_00)" d="M0,0.99L148,0.99L148,1.99L0,1.99L0,0.99Z "></path><path d="M0,0 L0,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M148,0 L148,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L148.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L148.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,9.06 L148.06,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,13.59 L148.06,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,13.59 L148.06,13.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div><div class="hce" style="left:0mm;top:4.53mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div><div class="hce" style="left:0mm;top:9.06mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:147.01mm;"></div></div></div></div></div></div></body>

</html>
