crates/hwp-core/tests/snapshots/snapshot_tests__borderfill_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<table class="hwp-table" style="border-collapse: collapse; border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
<tr>
<td style="background-color: rgb(255,127,63); border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
<tr>
<td style="background-color: rgb(255,127,63); border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
</table>
<table class="hwp-table" style="border-collapse: collapse; border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
</table>
</div>
