crates/hwp-core/tests/snapshots/snapshot_tests__charshape_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">가</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'"><i>기울임</i></span><span style="font-size: 10.0pt; font-family: '바탕'"><b>진하게</b></span></p>
<p><span style="font-size: 10.0pt; font-family: '굴림'">밑줄없음</span><span style="font-size: 10.0pt; font-family: '바탕'"><u>밑줄</u></span><span style="font-size: 10.0pt; font-family: '바탕'"><del>가운데줄</del></span><span style="font-size: 10.0pt; font-family: '바탕'"><u>윗줄</u></span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">글자크기:</span><span style="font-size: 10.0pt; font-family: '바탕'">기준크기10pt</span><span style="font-size: 10.0pt; font-family: '바탕'">한글90%</span><span style="font-size: 10.0pt; font-family: '바탕'">영문80%</span><span style="font-size: 10.0pt; font-family: '바탕'">기타70%</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">폰트:</span><span style="font-size: 10.0pt; font-family: '돋움'">한글돋움</span><span style="font-size: 10.0pt; font-family: '바탕'">영문CourierNew</span><span style="font-size: 10.0pt; font-family: '바탕'">기타قLucidaSansUnicode</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'"><u>붉은밑줄</u></span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'"><u>점선밑줄</u></span></p>
</div>
