crates/hwp-core/tests/snapshots/snapshot_tests__charshape_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



가

*기울임***진하게**

밑줄없음밑줄~~가운데줄~~윗줄

글자크기:기준크기10pt한글90%영문80%기타70%

폰트:한글돋움영문CourierNew기타قLucidaSansUnicode

붉은밑줄

점선밑줄
